[package]
name = "that_dahm_mod_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.9.1", features = ["lua51", "vendored", "serialize", "macros"] }
colored = "2.1.0"
dialoguer = "0.11.0"
lazy_static = "1.4.0"
serde_json = "1.0.113"